# airflow-training

./: airflow.cfg  airflow.db  commands.md  pyproject.toml
airflow_docker/: Dockerfile  docker-compose.yaml  important_note.md
airflow_docker/dags/: airflow_connection_dag.py  bash_operator_dag.py  catchup_and_backfill_dag.py  cron_expression_dag.py  external_package_dag.py  python_operators_dag.py  s3_like_object_store_sensor_dag.py  sql_hook_to_s3_dag.py  taskflow_api_dag.py
logs/scheduler/: latest
